+ V6 + Mejora en la comparticion de comentarios

--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1,6 +1,9 @@
 $blueskyfolk: #1e88e5
 $followcolor: #64b5f6
 
+.share-publication-div
+  display: none
+
 .vbox .user-video
   width: 20%
   min-height: 100px
