--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -18,7 +18,7 @@ Base para la interfaz en comun de todos los usuarios.
     <link rel="icon" type="image/ico" href="{{ STATIC_URL }}img/favicon.ico"/>
     <script src="{{ STATIC_URL }}js/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="{{ STATIC_URL }}js/jquery-migrate-1.4.1.min.js" type="text/javascript"></script>
-    
+
     {% block title %} <title>Skyfolk - Bienvenido.</title> {% endblock %}
     {% block extra-js %}{% endblock %}
     <!-- bloques de estilos para cada pagina -->
@@ -284,6 +284,9 @@ Base para la interfaz en comun de todos los usuarios.
 {% include "account/mobile-menu.html" %}
 {% block footer %}
     <script src="{{ STATIC_URL }}emoji/js/textarea_find_emoji.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.atwho.min.css">
+    <script src="{{ STATIC_URL }}js/jquery.caret.min.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/jquery.atwho.min.js" type="text/javascript"></script>
 {% endblock %}
 </body>
 </html>
