--- a/photologue/templates/photologue/photo_gallery.html
+++ b/photologue/templates/photologue/photo_gallery.html
@@ -113,7 +113,9 @@
                         </div>
                     </div>
                     <div class="row">
+                    {% comment %}
                         {{ form_zip.title.errors }}
+                    {% endcomment %}
                         <div class="input-field col s12">
                             <i class="material-icons prefix">title</i>
                             {{ form_zip.title }}
@@ -154,6 +156,10 @@
                     </div>
                     <button class="waves-effect waves-light btn blue darken-1 right" type="submit">Subir
                         <i class="material-icons right">file_upload</i>
+                    </button>
+                    <button id="close_upload_zip_form" class="waves-effect waves-light btn right transparent black-text btn-close"
+                                type="button">Cerrar
+                            <i class="material-icons right">close</i>
                     </button>
                 </form>
             </div>
