--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -160,7 +160,7 @@
                                             <div class="row">
                                                 <button data-id="{{ node.pk }}"
                                                         class="waves-effect waves-light btn blue darken-1 right edit-comment-btn"
-                                                        type="submit" id="submit_edit_publication">Editar
+                                                        type="button" id="submit_edit_publication">Editar
                                                     <i class="material-icons right">mode_edit</i>
                                                 </button>
                                             </div>
